Se agregar validación para adjuntar informe cuando sea requerido Se corrige bug en reporte ddp05 Se modifica plantilla de correo pruebas realizadas

--- a/src/main/resources/reports/DDP05.jrxml
+++ b/src/main/resources/reports/DDP05.jrxml
@@ -109,7 +109,7 @@
 	</queryString>
 	<field name="codigo" class="java.lang.String"/>
 	<field name="lote" class="java.lang.String"/>
-	<field name="fechaPrueba" class="java.time.LocalDate"/>
+	<field name="fechaPrueba" class="java.time.LocalDateTime"/>
 	<field name="producto" class="java.lang.String"/>
 	<field name="ordenFabricacion" class="java.lang.String"/>
 	<field name="lineaFabricacion" class="java.lang.String"/>
