--- a/src/main/resources/reports/DDP05.jrxml
+++ b/src/main/resources/reports/DDP05.jrxml
@@ -135,24 +135,24 @@
 		</band>
 	</background>
 	<title>
-		<band height="75" splitType="Stretch">
+		<band height="69" splitType="Stretch">
 			<staticText>
-				<reportElement x="230" y="0" width="324" height="40" uuid="0bb26eea-a0b6-4b60-9dd7-1b63ec366ac7"/>
+				<reportElement x="190" y="0" width="364" height="30" uuid="0bb26eea-a0b6-4b60-9dd7-1b63ec366ac7"/>
 				<textElement textAlignment="Right">
 					<font size="13" isBold="true" isItalic="true"/>
 				</textElement>
-				<text><![CDATA[LABORATORIO DE INVESTIGACIÓN, DESARROLLO Y CALIDAD]]></text>
+				<text><![CDATA[CENTRO DE INVESTIGACIÓN DE MATERIALES IMPTEK]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="342" y="30" width="212" height="26" uuid="12c697cb-864f-4cb4-abf4-c9d62dc2c504"/>
+				<reportElement x="342" y="20" width="212" height="26" uuid="12c697cb-864f-4cb4-abf4-c9d62dc2c504"/>
 				<textElement textAlignment="Right">
 					<font isItalic="true"/>
 				</textElement>
-				<text><![CDATA[E35 KM 11 vía Pifo. Sector Industrial El Inga
+				<text><![CDATA[E35 KM 14 vía Pifo. Sector Industrial El Inga
 Teléfono: (+593)6003450 ext. 1212]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="455" y="56" width="100" height="18" uuid="f7fa572c-2d1e-4f1e-b6da-2f26f3254279"/>
+				<reportElement x="455" y="46" width="100" height="18" uuid="f7fa572c-2d1e-4f1e-b6da-2f26f3254279"/>
 				<textElement textAlignment="Right">
 					<font isItalic="true" isUnderline="true"/>
 				</textElement>
@@ -172,7 +172,7 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<imageExpression><![CDATA["C:/CRIMPTEK/ReporteRolDePagos/imagenes/LOGO-IMPTEK.PNG"]]></imageExpression>
+				<imageExpression><![CDATA["C:/CRIMPTEK/ReporteRolDePagos/imagenes/LOGO-CIMI.jpg"]]></imageExpression>
 			</image>
 			<staticText>
 				<reportElement x="97" y="11" width="360" height="30" uuid="4a3b49bf-af53-4b16-8b52-34332f9facc3">
@@ -344,7 +344,7 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{fechaPrueba}.format( java.time.format.DateTimeFormatter.ofPattern("yyyy-MM-dd") )]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{fechaPrueba}.format( java.time.format.DateTimeFormatter.ofPattern("dd-MM-yyyy") )]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="457" y="40" width="97" height="19" uuid="fba53a26-68c5-40db-97d5-c97f509b60cb"/>
