--- a/src/main/resources/reports/DDP04.jrxml
+++ b/src/main/resources/reports/DDP04.jrxml
@@ -48,7 +48,7 @@
 		<field name="nombre" class="java.lang.String"/>
 		<field name="porcentaje" class="java.math.BigDecimal"/>
 		<field name="cantidad" class="java.math.BigDecimal"/>
-		<field name="unidad" class="java.lang.String"/>
+		<field name="unidadTexto" class="java.lang.String"/>
 		<variable name="TotalPorcentaje" class="java.math.BigDecimal" calculation="Sum">
 			<variableExpression><![CDATA[$F{porcentaje}]]></variableExpression>
 		</variable>
@@ -267,7 +267,7 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{fechaEntrega}.format( java.time.format.DateTimeFormatter.ofPattern("dd-MM-yyyy") )]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{fechaEntrega}.format( java.time.format.DateTimeFormatter.ofPattern("yyyy-MM-dd") )]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="350" y="140" width="180" height="19" uuid="bd728e22-89ae-4629-9245-22afb87fa3da"/>
@@ -295,7 +295,7 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{fechaCreacion}.format( java.time.format.DateTimeFormatter.ofPattern("dd-MM-yyyy") )]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{fechaCreacion}.format( java.time.format.DateTimeFormatter.ofPattern("yyyy-MM-dd") )]]></textFieldExpression>
 			</textField>
 			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement x="457" y="90" width="97" height="22" uuid="38473f32-0e3c-4e24-aedb-b43982da4525"/>
@@ -512,7 +512,7 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font size="9" isBold="true"/>
 								</textElement>
-								<textFieldExpression><![CDATA[$F{unidad}]]></textFieldExpression>
+								<textFieldExpression><![CDATA[$F{unidadTexto}]]></textFieldExpression>
 							</textField>
 						</jr:columnFooter>
 						<jr:detailCell style="Table_TD" height="20">
@@ -521,7 +521,7 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 								<textElement textAlignment="Center" verticalAlignment="Middle">
 									<font size="9"/>
 								</textElement>
-								<textFieldExpression><![CDATA[$F{unidad}]]></textFieldExpression>
+								<textFieldExpression><![CDATA[$F{unidadTexto}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
@@ -746,14 +746,14 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				<textElement verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{fechaCreacion}.format( java.time.format.DateTimeFormatter.ofPattern("dd-MM-yyyy") )]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{fechaCreacion}.format( java.time.format.DateTimeFormatter.ofPattern("yyyy-MM-dd") )]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="428" y="61" width="122" height="12" uuid="aa43157a-8aa2-4b70-91d3-9f9ac74316b2"/>
 				<textElement verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{fechaAprobacion}.format( java.time.format.DateTimeFormatter.ofPattern("dd-MM-yyyy") )]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{fechaAprobacion}.format( java.time.format.DateTimeFormatter.ofPattern("yyyy-MM-dd") )]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
 				<reportElement x="0" y="20" width="190" height="58" uuid="1fce81ad-ad95-446e-a1a7-fd31ca84410f"/>
