--- a/src/main/resources/reports/DDP05CondicionesMantenimiento.jrxml
+++ b/src/main/resources/reports/DDP05CondicionesMantenimiento.jrxml
@@ -16,7 +16,7 @@
 	<field name="_THIS" class="java.lang.String"/>
 	<field name="nombre" class="java.lang.String"/>
 	<field name="valor" class="java.math.BigDecimal"/>
-	<field name="unidad" class="java.lang.String"/>
+	<field name="unidadTexto" class="java.lang.String"/>
 	<field name="maquinaria" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
@@ -66,7 +66,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="9"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{unidad}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{unidadTexto}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="0" y="0" width="82" height="19" uuid="ea50d315-e3e2-43ba-a6f5-dd66ba14597e"/>
