--- a/src/main/resources/reports/DDP05.jrxml
+++ b/src/main/resources/reports/DDP05.jrxml
@@ -160,7 +160,7 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				<textElement textAlignment="Right">
 					<font isItalic="true" isUnderline="true"/>
 				</textElement>
-				<text><![CDATA[www.imptek.com]]></text>
+				<text><![CDATA[www.imptekcorp.com]]></text>
 			</staticText>
 		</band>
 	</title>
