--- a/src/main/resources/reports/DDP04.jrxml
+++ b/src/main/resources/reports/DDP04.jrxml
@@ -110,7 +110,7 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				<textElement textAlignment="Right">
 					<font isItalic="true" isUnderline="true"/>
 				</textElement>
-				<text><![CDATA[www.imptek.com]]></text>
+				<text><![CDATA[www.imptekcorp.com]]></text>
 			</staticText>
 			<image vAlign="Middle">
 				<reportElement x="0" y="60" width="97" height="52" uuid="0f6eb59c-505a-44c4-91ed-ea07d98a4563">
@@ -309,22 +309,54 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 		</band>
 	</title>
 	<detail>
-		<band height="231" splitType="Stretch">
-			<rectangle>
-				<reportElement mode="Transparent" x="300" y="90" width="254" height="129" uuid="1e0425e5-618a-4142-a19d-e07b8a40ec3c"/>
-			</rectangle>
-			<rectangle>
-				<reportElement mode="Transparent" x="0" y="-1" width="554" height="72" uuid="836a1447-37b2-4e3f-9810-984378c43301">
-					<property name="com.jaspersoft.studio.unit.width" value="px"/>
-				</reportElement>
-			</rectangle>
+		<band height="59" splitType="Stretch">
+			<frame>
+				<reportElement stretchType="RelativeToBandHeight" x="0" y="-1" width="554" height="60" uuid="c52bc74a-b9df-49a2-8227-f3e4adf2f2ab"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+			</frame>
 			<subreport>
-				<reportElement x="5" y="-1" width="525" height="61" uuid="80b02392-268e-4655-a092-f124cab74d8b"/>
+				<reportElement x="5" y="-1" width="525" height="59" uuid="80b02392-268e-4655-a092-f124cab74d8b"/>
 				<dataSourceExpression><![CDATA[new net.sf.jasperreports.engine.data.JRBeanCollectionDataSource($F{motivosSeleccionados})]]></dataSourceExpression>
 				<subreportExpression><![CDATA["DDP04Motivos.jasper"]]></subreportExpression>
 			</subreport>
+		</band>
+		<band height="20">
+			<frame>
+				<reportElement stretchType="RelativeToBandHeight" x="0" y="0" width="554" height="20" uuid="c37f9a65-5860-4679-aa2c-9a31144721bf"/>
+				<box>
+					<leftPen lineWidth="1.0"/>
+					<rightPen lineWidth="1.0"/>
+				</box>
+			</frame>
+			<rectangle>
+				<reportElement x="7" y="3" width="10" height="10" uuid="16378534-6557-4ff0-89df-49cdf1a9a37a">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+			</rectangle>
+			<textField>
+				<reportElement x="10" y="3" width="508" height="14" uuid="25955e52-a550-47f2-9b6e-b8166ccc50af"/>
+				<textElement>
+					<font size="8"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{motivoOtro}== null?"    Otro":"x   Otro :"+$F{motivoOtro}]]></textFieldExpression>
+			</textField>
+		</band>
+		<band height="161">
+			<textField isBlankWhenNull="true">
+				<reportElement x="233" y="0" width="111" height="20" forecolor="#FC0317" uuid="ab3c06af-e14f-44c9-889c-5b136f85e1e7"/>
+				<textElement verticalAlignment="Middle">
+					<font size="9" isBold="true" isItalic="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{contieneAdjuntoDescripcionProducto} ? "(Leer adjunto)":""]]></textFieldExpression>
+			</textField>
 			<staticText>
-				<reportElement x="0" y="71" width="554" height="19" uuid="ccd4af4f-11d0-44dd-b780-7d70e6d15132"/>
+				<reportElement x="0" y="0" width="554" height="19" uuid="e8f63c61-b9b1-4844-93ff-0888166e3fd0"/>
 				<box topPadding="0" leftPadding="3" bottomPadding="0" rightPadding="0">
 					<topPen lineWidth="1.0"/>
 					<leftPen lineWidth="1.0"/>
@@ -336,7 +368,7 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				<text><![CDATA[2. Descripción del Producto que se requiere obtener.]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="0" y="90" width="300" height="141" uuid="bcea94a5-0590-4610-8245-d102303408ec"/>
+				<reportElement x="0" y="19" width="300" height="141" uuid="a5785e4d-cdb3-4d8e-83da-a1e4f107a2bd"/>
 				<box padding="4">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -349,7 +381,7 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				<textFieldExpression><![CDATA[$F{descripcionProducto}]]></textFieldExpression>
 			</textField>
 			<image hAlign="Center" vAlign="Top">
-				<reportElement x="322" y="96" width="198" height="115" uuid="d180d92f-3133-4c46-9494-4813ef3cb231"/>
+				<reportElement x="323" y="26" width="198" height="115" uuid="691d6412-dad6-43af-b61f-845315decd7f"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -358,8 +390,11 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				</box>
 				<imageExpression><![CDATA[$F{imagen1Ruta}]]></imageExpression>
 			</image>
+			<rectangle>
+				<reportElement mode="Transparent" x="300" y="19" width="254" height="129" uuid="d732364d-8410-495e-af86-b3e03953d35c"/>
+			</rectangle>
 			<staticText>
-				<reportElement x="300" y="219" width="254" height="12" uuid="21bc41aa-8108-43fb-8202-dec7d97c3db4"/>
+				<reportElement x="300" y="149" width="254" height="12" uuid="b74ef3c2-ab5b-4c4c-ae70-7ba60711c0bb"/>
 				<box>
 					<leftPen lineWidth="1.0"/>
 					<bottomPen lineWidth="1.0"/>
@@ -370,26 +405,6 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				</textElement>
 				<text><![CDATA[Detalle gráfico]]></text>
 			</staticText>
-			<rectangle>
-				<reportElement x="7" y="56" width="10" height="10" uuid="5579391d-7ba0-4437-906e-2129028c1095">
-					<property name="com.jaspersoft.studio.unit.width" value="px"/>
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-				</reportElement>
-			</rectangle>
-			<textField>
-				<reportElement x="10" y="56" width="508" height="14" uuid="310ae85d-a40f-4825-88ab-092886e7270c"/>
-				<textElement>
-					<font size="8"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{motivoOtro}== null?"    Otro":"x   Otro :"+$F{motivoOtro}]]></textFieldExpression>
-			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement x="232" y="71" width="111" height="20" forecolor="#FC0317" uuid="7e68e52d-c65a-430f-a4f9-05c6929ad522"/>
-				<textElement verticalAlignment="Middle">
-					<font size="9" isBold="true" isItalic="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{contieneAdjuntoDescripcionProducto} ? "(Leer adjunto)":""]]></textFieldExpression>
-			</textField>
 		</band>
 		<band height="86">
 			<printWhenExpression><![CDATA[$F{nombreArea}.startsWith( "I+D")]]></printWhenExpression>
