--- a/src/main/resources/reports/DDP04.jrxml
+++ b/src/main/resources/reports/DDP04.jrxml
@@ -367,8 +367,8 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				</textElement>
 				<text><![CDATA[2. Descripción del Producto que se requiere obtener.]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="0" y="19" width="300" height="141" uuid="a5785e4d-cdb3-4d8e-83da-a1e4f107a2bd"/>
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+				<reportElement x="0" y="19" width="300" height="142" uuid="a5785e4d-cdb3-4d8e-83da-a1e4f107a2bd"/>
 				<box padding="4">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -394,7 +394,7 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				<reportElement mode="Transparent" x="300" y="19" width="254" height="129" uuid="d732364d-8410-495e-af86-b3e03953d35c"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="300" y="149" width="254" height="12" uuid="b74ef3c2-ab5b-4c4c-ae70-7ba60711c0bb"/>
+				<reportElement x="300" y="148" width="254" height="13" uuid="b74ef3c2-ab5b-4c4c-ae70-7ba60711c0bb"/>
 				<box>
 					<leftPen lineWidth="1.0"/>
 					<bottomPen lineWidth="1.0"/>
@@ -594,7 +594,7 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				</graphicElement>
 			</rectangle>
 		</band>
-		<band height="122">
+		<band height="61">
 			<staticText>
 				<reportElement x="0" y="0" width="554" height="19" uuid="52e55084-d4c8-44f0-a5b6-5bebe62414ba"/>
 				<box>
@@ -607,19 +607,6 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 					<font size="9" isBold="true"/>
 				</textElement>
 				<text><![CDATA[ 3. Variables de Proceso que deben ser controladas:]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="0" y="61" width="554" height="19" uuid="4a079039-af55-4bf6-aca6-b936e059dbe9"/>
-				<box>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<textElement verticalAlignment="Middle">
-					<font size="9" isBold="true"/>
-				</textElement>
-				<text><![CDATA[ 3.1. Verificaciones adicionales u otras en especial.? (Describa)]]></text>
 			</staticText>
 			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement x="0" y="19" width="554" height="42" uuid="0dc9ad5c-1476-435b-ad13-043c28aea359"/>
@@ -634,8 +621,23 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{variablesProceso}]]></textFieldExpression>
 			</textField>
+		</band>
+		<band height="61">
+			<staticText>
+				<reportElement x="0" y="0" width="554" height="19" uuid="bcf47cef-580d-40ea-be81-a462721b5e83"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement verticalAlignment="Middle">
+					<font size="9" isBold="true"/>
+				</textElement>
+				<text><![CDATA[ 3.1. Verificaciones adicionales u otras en especial.? (Describa)]]></text>
+			</staticText>
 			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
-				<reportElement x="0" y="80" width="554" height="42" uuid="e09afaa8-177d-4108-bebe-e556f51b7a87"/>
+				<reportElement x="0" y="19" width="554" height="42" uuid="5bd4ec91-0200-4a0a-a8bf-ba7167d1e136"/>
 				<box padding="4">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -694,9 +696,9 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 		</band>
 		<band height="82">
 			<staticText>
-				<reportElement x="0" y="1" width="190" height="19" uuid="33a89d46-ce17-4e6e-a985-5d12b67753e8"/>
+				<reportElement x="0" y="0" width="190" height="19" uuid="33a89d46-ce17-4e6e-a985-5d12b67753e8"/>
 				<box>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -707,11 +709,11 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				<text><![CDATA[ 5. Observaciones:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="190" y="1" width="182" height="19" uuid="aeb19600-62e4-4288-93c8-e0a2b4e3a941">
+				<reportElement x="190" y="0" width="182" height="19" uuid="aeb19600-62e4-4288-93c8-e0a2b4e3a941">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<box>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -722,11 +724,11 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				<text><![CDATA[Elaborado por:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="372" y="1" width="182" height="19" uuid="97ce3bf2-e014-4fef-b212-68ee6dc244fa">
+				<reportElement x="372" y="0" width="182" height="19" uuid="97ce3bf2-e014-4fef-b212-68ee6dc244fa">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<box>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -737,41 +739,41 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				<text><![CDATA[Aprobado por:]]></text>
 			</staticText>
 			<rectangle>
-				<reportElement mode="Transparent" x="190" y="57" width="182" height="21" uuid="c8f580e7-58b2-498d-b528-747204bae469"/>
+				<reportElement mode="Transparent" x="190" y="56" width="182" height="21" uuid="c8f580e7-58b2-498d-b528-747204bae469"/>
 			</rectangle>
 			<rectangle>
-				<reportElement mode="Transparent" x="372" y="57" width="182" height="21" uuid="73e39825-2987-43ff-a9b4-94a9e50b8ee1"/>
+				<reportElement mode="Transparent" x="372" y="56" width="182" height="21" uuid="73e39825-2987-43ff-a9b4-94a9e50b8ee1"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="195" y="60" width="44" height="14" uuid="8a0ee68e-3ac1-422c-9ef5-dcbd55e14d07"/>
+				<reportElement x="195" y="59" width="44" height="14" uuid="8a0ee68e-3ac1-422c-9ef5-dcbd55e14d07"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="378" y="60" width="44" height="14" uuid="605b294f-e76a-4f3e-a419-bf5751c3cfb0"/>
+				<reportElement x="378" y="59" width="44" height="14" uuid="605b294f-e76a-4f3e-a419-bf5751c3cfb0"/>
 				<textElement>
 					<font size="9"/>
 				</textElement>
 				<text><![CDATA[Fecha:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="241" y="61" width="122" height="12" uuid="27648a61-2706-4897-b0b6-0f1c60d6d74c"/>
+				<reportElement x="241" y="60" width="122" height="12" uuid="27648a61-2706-4897-b0b6-0f1c60d6d74c"/>
 				<textElement verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{fechaCreacion}.format( java.time.format.DateTimeFormatter.ofPattern("yyyy-MM-dd") )]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="428" y="61" width="122" height="12" uuid="aa43157a-8aa2-4b70-91d3-9f9ac74316b2"/>
+				<reportElement x="428" y="60" width="122" height="12" uuid="aa43157a-8aa2-4b70-91d3-9f9ac74316b2"/>
 				<textElement verticalAlignment="Middle">
 					<font size="7"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{fechaAprobacion}.format( java.time.format.DateTimeFormatter.ofPattern("yyyy-MM-dd") )]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="0" y="20" width="190" height="58" uuid="1fce81ad-ad95-446e-a1a7-fd31ca84410f"/>
+				<reportElement x="0" y="19" width="190" height="58" uuid="1fce81ad-ad95-446e-a1a7-fd31ca84410f"/>
 				<box padding="4">
 					<leftPen lineWidth="1.0"/>
 					<bottomPen lineWidth="1.0"/>
@@ -782,7 +784,7 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				<textFieldExpression><![CDATA[$F{observacion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="190" y="20" width="182" height="36" uuid="ab60e7b6-bc66-45a5-b945-ce1c98739ccf"/>
+				<reportElement x="190" y="19" width="182" height="37" uuid="ab60e7b6-bc66-45a5-b945-ce1c98739ccf"/>
 				<box>
 					<topPen lineWidth="1.0"/>
 					<leftPen lineWidth="1.0"/>
@@ -794,7 +796,7 @@ Teléfono: (+593)6003450 ext. 1212]]></text>
 				<textFieldExpression><![CDATA[$F{nombreSolicitante}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="372" y="21" width="182" height="36" uuid="e272b03c-ea3b-4f25-b66e-adccaed81b03"/>
+				<reportElement x="372" y="19" width="182" height="37" uuid="e272b03c-ea3b-4f25-b66e-adccaed81b03"/>
 				<box>
 					<topPen lineWidth="1.0"/>
 					<rightPen lineWidth="1.0"/>
