--- a/src/main/resources/reports/DesviacionRequisito.jrxml
+++ b/src/main/resources/reports/DesviacionRequisito.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.13.0.final using JasperReports Library version 6.13.0-46ada4d1be8f3c5985fd0b6146f3ed44caed6f05  -->
+<!-- Created with Jaspersoft Studio version 6.20.1.final using JasperReports Library version 6.20.1-7584acb244139816654f64e2fd57a00d3e31921e  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="DesviacionRequisitos" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="cdce7185-5fef-45b3-93f5-c0fdb55576e4">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="net.sf.jasperreports.export.pdf.encrypted" value="true"/>
@@ -143,7 +143,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA["PNC-04"]]></textFieldExpression>
+				<textFieldExpression><![CDATA["FR-CDQ-00.03.04"]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement mode="Opaque" x="437" y="63" width="103" height="20" backcolor="#1AA3C9" uuid="3a8aa6eb-754f-422d-8296-e5e503d3b6c4"/>
@@ -201,7 +201,7 @@
 					<rightPen lineWidth="1.0"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
-				<text><![CDATA[Referencia: MP-PNC]]></text>
+				<text><![CDATA[Referencia: MP-CDQ-00.03]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="113" y="63" width="324" height="20" uuid="c5490c34-84c1-4d6a-be3e-907924831319"/>
