--- a/src/main/resources/reports/DesviacionRequisito.jrxml
+++ b/src/main/resources/reports/DesviacionRequisito.jrxml
@@ -565,24 +565,16 @@
 				<textFieldExpression><![CDATA[$F{alcance}]]></textFieldExpression>
 			</textField>
 		</band>
-	</detail>
-	<columnFooter>
-		<band splitType="Stretch"/>
-	</columnFooter>
-	<pageFooter>
-		<band splitType="Stretch"/>
-	</pageFooter>
-	<lastPageFooter>
-		<band height="331">
+		<band height="309">
 			<staticText>
 				<reportElement x="10" y="6" width="529" height="20" uuid="ccfda2cd-3d22-43a5-beec-22ceab5970fe">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="9" isBold="true"/>
@@ -590,15 +582,15 @@
 				<text><![CDATA[Firma de los responsables]]></text>
 			</staticText>
 			<frame>
-				<reportElement x="10" y="26" width="529" height="300" uuid="7f10c534-2947-4c56-bbdd-ba7fca0bf763"/>
+				<reportElement x="10" y="26" width="529" height="274" uuid="7f10c534-2947-4c56-bbdd-ba7fca0bf763"/>
 				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<staticText>
-					<reportElement x="11" y="61" width="259" height="30" uuid="2f61e8af-d1d3-4b56-8e6a-21de1af7702b"/>
+					<reportElement x="11" y="49" width="259" height="30" uuid="2f61e8af-d1d3-4b56-8e6a-21de1af7702b"/>
 					<textElement textAlignment="Center">
 						<font size="9"/>
 					</textElement>
@@ -606,7 +598,7 @@
 Gerente General / Gerente de Comercialización]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="11" y="151" width="259" height="30" uuid="6a8e6149-6916-45af-b0a8-0f155a54fe60"/>
+					<reportElement x="11" y="139" width="259" height="30" uuid="6a8e6149-6916-45af-b0a8-0f155a54fe60"/>
 					<textElement textAlignment="Center">
 						<font size="9"/>
 					</textElement>
@@ -614,7 +606,7 @@ Gerente General / Gerente de Comercialización]]></text>
 Gerente de I&D y Calidad]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="11" y="251" width="259" height="30" uuid="ac534a5c-b812-42d0-a70d-e2e2ea6f236b"/>
+					<reportElement x="11" y="226" width="259" height="30" uuid="ac534a5c-b812-42d0-a70d-e2e2ea6f236b"/>
 					<textElement textAlignment="Center">
 						<font size="9"/>
 					</textElement>
@@ -622,7 +614,7 @@ Gerente de I&D y Calidad]]></text>
 Gerente de Producto]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="300" y="62" width="221" height="30" uuid="de9474c9-41fd-4016-8563-e39981d06dcc"/>
+					<reportElement x="300" y="50" width="221" height="30" uuid="de9474c9-41fd-4016-8563-e39981d06dcc"/>
 					<textElement textAlignment="Center">
 						<font size="9"/>
 					</textElement>
@@ -630,7 +622,7 @@ Gerente de Producto]]></text>
 Gerente de Operaciones]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="309" y="152" width="212" height="30" uuid="a2f7ad4e-448d-4670-b935-a02b021ffa14"/>
+					<reportElement x="309" y="140" width="212" height="30" uuid="a2f7ad4e-448d-4670-b935-a02b021ffa14"/>
 					<textElement textAlignment="Center">
 						<font size="9"/>
 					</textElement>
@@ -639,6 +631,15 @@ Jefe de Logística y Compras]]></text>
 				</staticText>
 			</frame>
 		</band>
+	</detail>
+	<columnFooter>
+		<band splitType="Stretch"/>
+	</columnFooter>
+	<pageFooter>
+		<band splitType="Stretch"/>
+	</pageFooter>
+	<lastPageFooter>
+		<band height="20"/>
 	</lastPageFooter>
 	<summary>
 		<band splitType="Stretch"/>
