--- a/src/main/resources/reports/PNCP.jrxml
+++ b/src/main/resources/reports/PNCP.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 6.20.1.final using JasperReports Library version 6.20.1-7584acb244139816654f64e2fd57a00d3e31921e  -->
+<!-- Created with Jaspersoft Studio version 6.13.0.final using JasperReports Library version 6.13.0-46ada4d1be8f3c5985fd0b6146f3ed44caed6f05  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="PNCP" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="cdce7185-5fef-45b3-93f5-c0fdb55576e4">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
 	<property name="net.sf.jasperreports.export.pdf.encrypted" value="true"/>
@@ -70,6 +70,8 @@
 	<field name="defectos" class="java.util.List"/>
 	<field name="procedenciaProducto" class="java.lang.String"/>
 	<field name="procedenciaProductoPP" class="java.lang.String"/>
+	<field name="aprobadoPor" class="java.lang.String"/>
+	<field name="fechaAprobacion" class="java.time.LocalDate"/>
 	<variable name="fechaActual" class="java.lang.String">
 		<variableExpression><![CDATA[new SimpleDateFormat("dd-MM-yyyy").format(new Date())]]></variableExpression>
 	</variable>
@@ -730,7 +732,7 @@
 				<subreportExpression><![CDATA["PncDestinoFinal.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
-		<band height="114">
+		<band height="116">
 			<staticText>
 				<reportElement x="10" y="11" width="270" height="20" uuid="730578e7-8542-48e1-9d92-48782637a81c">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
@@ -814,6 +816,29 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{elaboradoPor}]]></textFieldExpression>
 			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="319" y="41" width="160" height="40" uuid="5ae1efa1-1982-4d5b-a5cc-a8a4ecaae5cd"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{aprobadoPor}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement x="350" y="91" width="190" height="20" uuid="c41d70f5-5269-4a67-80b1-73c3410a197e"/>
+				<box>
+					<topPen lineWidth="1.0"/>
+					<bottomPen lineWidth="1.0"/>
+					<rightPen lineWidth="1.0"/>
+				</box>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{fechaAprobacion}]]></textFieldExpression>
+			</textField>
+			<image>
+				<reportElement x="340" y="-12" width="101" height="93" uuid="b1e9214b-f560-4812-8240-91a3faf0a212">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+					<printWhenExpression><![CDATA[$F{fechaAprobacion} != null]]></printWhenExpression>
+				</reportElement>
+				<imageExpression><![CDATA["C:/CRIMPTEK/Report Resources/images/Sello de calidad.png"]]></imageExpression>
+			</image>
 		</band>
 	</detail>
 	<columnFooter>
